adding login page

--- a/Login.html
+++ b/Login.html
@@ -92,7 +92,7 @@
                 alert("please, fill the correct information")
             }else{
                 alert("login successfully")
-                window.location.href="./HomePage/index.html"
+                window.location.href="index.html"
             }
     }
         
